<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lemon.rating.mindrating.Activity.LoginActivity">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_120">

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_account"/>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@null"
            android:hint="@string/regist_username"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@color/orange_light"/>

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_pw1"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_pw"/>

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw1"
            android:background="@null"
            android:hint="@string/regist_password1"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw1"
            android:background="@color/orange_light"/>

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_pw2"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_pw"/>

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw2"
            android:background="@null"
            android:hint="@string/regist_password2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw2"
            android:background="@color/orange_light"/>

    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_huge"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/regist"
        android:background="@drawable/btn_orange_selector"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_login"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/text_size_normal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/regist_login"
            android:textColor="@color/top_bar_normal_bg" />

    </com.zhy.autolayout.AutoRelativeLayout>


</com.zhy.autolayout.AutoLinearLayout>
